altv-capi/client/altv-capi.hpp


struct alt_String {
    char * data;
    unsigned long long size;
};
struct alt_StringView {
    const char * data;
    unsigned long long size;
};
struct alt_Array_MValue {
    struct alt_MValue* data;
    unsigned long long size;
    unsigned long long capacity;
};
struct alt_Array_String {
    struct alt_String* data;
    unsigned long long size;
    unsigned long long capacity;
};
struct alt_MValue {
    enum alt_MValue_Type type;
    struct alt_MValue_Storage* storage;
};
enum alt_MValue_Type {
    ALT_MVALUE_TYPE_NIL = 0,
    ALT_MVALUE_TYPE_BOOL = 1,
    ALT_MVALUE_TYPE_INT = 2,
    ALT_MVALUE_TYPE_UINT = 3,
    ALT_MVALUE_TYPE_DOUBLE = 4,
    ALT_MVALUE_TYPE_STRING = 5,
    ALT_MVALUE_TYPE_LIST = 6,
    ALT_MVALUE_TYPE_DICT = 7,
    ALT_MVALUE_TYPE_ENTITY = 8,
    ALT_MVALUE_TYPE_FUNCTION = 9
};
struct alt_MValue_Function {
    void * invoker;
};
struct alt_MValueDict {
    enum alt_MValue_Type type;
    struct alt_MValue_Storage* storage;
};
CAPI void alt_MValueDict_free(struct alt_MValueDict* ptr);
CAPI struct alt_MValueDict* alt_MValueDict_Create();
CAPI struct alt_MValueDict* alt_MValueDict_Create_1(_Bool* val);
CAPI struct alt_MValueDict* alt_MValueDict_Create_2(long long* val);
CAPI struct alt_MValueDict* alt_MValueDict_Create_3(unsigned long long* val);
CAPI struct alt_MValueDict* alt_MValueDict_Create_4(double* val);
CAPI struct alt_MValueDict* alt_MValueDict_Create_5(struct alt_String* val);
CAPI struct alt_MValueDict* alt_MValueDict_Create_6(struct alt_Array_MValue* val);
CAPI struct alt_MValueDict* alt_MValueDict_Create_8(struct alt_IBaseObject** val);
CAPI struct alt_MValueDict* alt_MValueDict_Create_9(struct alt_MValue_Function* val);
CAPI struct alt_MValueDict* alt_MValueDict_Create_10(int val);
CAPI struct alt_MValueDict* alt_MValueDict_Create_11(unsigned int val);
CAPI struct alt_MValueDict* alt_MValueDict_Create_12(char* val);
CAPI struct alt_MValueDict* alt_MValueDict_Create_14(struct alt_MValue* that);
CAPI void alt_MValueDict_Assign_constMValueRef(struct alt_MValueDict* _instance, struct alt_MValue* that);
CAPI _Bool alt_MValueDict_ToBool(struct alt_MValueDict* _instance);
CAPI long long alt_MValueDict_ToInt(struct alt_MValueDict* _instance);
CAPI unsigned long long alt_MValueDict_ToUInt(struct alt_MValueDict* _instance);
CAPI struct alt_String* alt_MValueDict_ToString(struct alt_MValueDict* _instance);
CAPI enum alt_MValue_Type alt_MValueDict_GetType(struct alt_MValueDict* _instance);
CAPI struct alt_MValueDict* alt_MValueDict_Create_15();
CAPI struct alt_MValueDict* alt_MValueDict_Create_17(struct alt_MValue* val);
CAPI struct alt_MValue* alt_MValueDict_Access_String(struct alt_MValueDict* _instance, struct alt_String* key);
CAPI struct alt_MValueDict* alt_MValueDict_Create_18(struct alt_MValueDict* _p0);
CAPI struct alt_MValueDict* alt_MValueDict_Create_19(struct alt_MValueDict* _p0);
CAPI void alt_MValueDict_Assign_MValueDictRefRef(struct alt_MValueDict* _instance, struct alt_MValueDict* _p0);
CAPI void alt_MValueDict_Assign_constMValueDictRef(struct alt_MValueDict* _instance, struct alt_MValueDict* _p0);
struct alt_IResource {
    struct alt_String type;
    struct alt_String name;
    struct alt_String path;
    struct alt_String main;
    struct alt_IPackage* pkg;
    enum alt_IResource_State state;
    struct alt_MValueDict exports;
};
CAPI enum alt_IResource_State alt_IResource_GetState(struct alt_IResource* _instance);
CAPI _Bool alt_IResource_IsStarted(struct alt_IResource* _instance);
CAPI struct alt_StringView* alt_IResource_GetType(struct alt_IResource* _instance);
CAPI struct alt_StringView* alt_IResource_GetName(struct alt_IResource* _instance);
CAPI struct alt_StringView* alt_IResource_GetPath(struct alt_IResource* _instance);
CAPI struct alt_StringView* alt_IResource_GetMain(struct alt_IResource* _instance);
CAPI struct alt_IPackage* alt_IResource_GetPackage(struct alt_IResource* _instance);
CAPI struct alt_MValueDict* alt_IResource_GetExports(struct alt_IResource* _instance);
CAPI _Bool alt_IResource_Instantiate(struct alt_IResource* _instance);
CAPI _Bool alt_IResource_Start(struct alt_IResource* _instance);
CAPI _Bool alt_IResource_Stop(struct alt_IResource* _instance);
CAPI _Bool alt_IResource_OnEvent(struct alt_IResource* _instance, struct alt_CEvent* ev);
CAPI void alt_IResource_OnTick(struct alt_IResource* _instance);
CAPI void alt_IResource_OnCreateBaseObject(struct alt_IResource* _instance, struct alt_IBaseObject* object);
CAPI void alt_IResource_OnRemoveBaseObject(struct alt_IResource* _instance, struct alt_IBaseObject* object);
CAPI struct alt_IResource* alt_IResource_Create(struct alt_IResource* _p0);
CAPI void alt_IResource_Assign_constIResourceRef(struct alt_IResource* _instance, struct alt_IResource* _p0);
enum alt_IResource_State {
    ALT_IRESOURCE_STATE_STOPPED = 0,
    ALT_IRESOURCE_STATE_INSTANTIATING = 1,
    ALT_IRESOURCE_STATE_STARTED = 2
};
struct alt_IResource_CreationInfo {
    struct alt_String type;
    struct alt_String name;
    struct alt_String path;
    struct alt_String main;
    struct alt_Array_String deps;
    struct alt_IPackage* pkg;
};
CAPI void alt_IResource_CreationInfo_free(struct alt_IResource_CreationInfo* ptr);
CAPI struct alt_IResource_CreationInfo* alt_IResource_CreationInfo_Create(struct alt_IResource_CreationInfo* _p0);
CAPI struct alt_IResource_CreationInfo* alt_IResource_CreationInfo_Create_1(struct alt_IResource_CreationInfo* _p0);
CAPI void alt_IResource_CreationInfo_Assign_IResource_CreationInfoRefRef(struct alt_IResource_CreationInfo* _instance, struct alt_IResource_CreationInfo* _p0);
struct alt_MValueFunction {
    enum alt_MValue_Type type;
    struct alt_MValue_Storage* storage;
};
CAPI void alt_MValueFunction_free(struct alt_MValueFunction* ptr);
CAPI struct alt_MValueFunction* alt_MValueFunction_Create();
CAPI struct alt_MValueFunction* alt_MValueFunction_Create_1(_Bool* val);
struct alt_IBaseObject {};
struct alt_CEvent {
    enum alt_CEvent_Type type;
    _Bool cancelled;
};
enum alt_CEvent_Type {
    ALT_CEVENT_TYPE_NONE = 0,
    ALT_CEVENT_TYPE_PLAYER_CONNECT = 1,
    ALT_CEVENT_TYPE_PLAYER_DISCONNECT = 2,
    ALT_CEVENT_TYPE_SERVER_SCRIPT_EVENT = 3,
    ALT_CEVENT_TYPE_CLIENT_SCRIPT_EVENT = 4,
    ALT_CEVENT_TYPE_META_CHANGE = 5,
    ALT_CEVENT_TYPE_SYNCED_META_CHANGE = 6,
    ALT_CEVENT_TYPE_PLAYER_DAMAGE = 7,
    ALT_CEVENT_TYPE_PLAYER_DEATH = 8,
    ALT_CEVENT_TYPE_CHECKPOINT_EVENT = 9,
    ALT_CEVENT_TYPE_COLSHAPE_EVENT = 10,
    ALT_CEVENT_TYPE_PLAYER_ENTER_VEHICLE = 11,
    ALT_CEVENT_TYPE_PLAYER_LEAVE_VEHICLE = 12,
    ALT_CEVENT_TYPE_PLAYER_CHANGE_VEHICLE_SEAT = 13,
    ALT_CEVENT_TYPE_REMOVE_ENTITY_EVENT = 14,
    ALT_CEVENT_TYPE_DATA_NODE_RECEIVED_EVENT = 15,
    ALT_CEVENT_TYPE_CONSOLE_COMMAND_EVENT = 16,
    ALT_CEVENT_TYPE_CONNECTION_COMPLETE = 17,
    ALT_CEVENT_TYPE_DISCONNECT_EVENT = 18,
    ALT_CEVENT_TYPE_WEB_VIEW_EVENT = 19,
    ALT_CEVENT_TYPE_KEYBOARD_EVENT = 20,
    ALT_CEVENT_TYPE_GAME_ENTITY_CREATE = 21,
    ALT_CEVENT_TYPE_GAME_ENTITY_DESTROY = 22,
    ALT_CEVENT_TYPE_ALL = 23,
    ALT_CEVENT_TYPE_SIZE = 24
};
struct alt_IPackage {};