client/src/altv_capi.rs

pe_ : alt_MValue_Type , pub storage : * mut alt_MValue_Storage , } # [ test ] fn bindgen_test_layout_alt_MValueDict ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_MValueDict > ( ) , 16usize , concat ! ( "Size of: " , stringify ! ( alt_MValueDict ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_MValueDict > ( ) , 8usize , concat ! ( "Alignment of " , stringify ! ( alt_MValueDict ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_MValueDict > ( ) ) ) . type_ as * const _ as usize } , 0usize , concat ! ( "Offset of field: " , stringify ! ( alt_MValueDict ) , "::" , stringify ! ( type_ ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_MValueDict > ( ) ) ) . storage as * const _ as usize } , 8usize , concat ! ( "Offset of field: " , stringify ! ( alt_MValueDict ) , "::" , stringify ! ( storage ) ) ) ; } extern "C" { pub fn alt_MValueDict_free ( ptr : * mut alt_MValueDict ) ; } extern "C" { pub fn alt_MValueDict_Create ( ) -> * mut alt_MValueDict ; } extern "C" { pub fn alt_MValueDict_Create_1 ( val : * mut bool ) -> * mut alt_MValueDict ; } extern "C" { pub fn alt_MValueDict_Create_2 ( val : * mut :: std :: os :: raw :: c_longlong ) -> * mut alt_MValueDict ; } extern "C" { pub fn alt_MValueDict_Create_3 ( val : * mut :: std :: os :: raw :: c_ulonglong ) -> * mut alt_MValueDict ; } extern "C" { pub fn alt_MValueDict_Create_4 ( val : * mut f64 ) -> * mut alt_MValueDict ; } extern "C" { pub fn alt_MValueDict_Create_5 ( val : * mut alt_String ) -> * mut alt_MValueDict ; } extern "C" { pub fn alt_MValueDict_Create_6 ( val : * mut alt_Array_MValue ) -> * mut alt_MValueDict ; } extern "C" { pub fn alt_MValueDict_Create_8 ( val : * mut * mut alt_IBaseObject ) -> * mut alt_MValueDict ; } extern "C" { pub fn alt_MValueDict_Create_9 ( val : * mut alt_MValue_Function ) -> * mut alt_MValueDict ; } extern "C" { pub fn alt_MValueDict_Create_10 ( val : :: std :: os :: raw :: c_int ) -> * mut alt_MValueDict ; } extern "C" { pub fn alt_MValueDict_Create_11 ( val : :: std :: os :: raw :: c_uint ) -> * mut alt_MValueDict ; } extern "C" { pub fn alt_MValueDict_Create_12 ( val : * mut :: std :: os :: raw :: c_char ) -> * mut alt_MValueDict ; } extern "C" { pub fn alt_MValueDict_Create_14 ( that : * mut alt_MValue ) -> * mut alt_MValueDict ; } extern "C" { pub fn alt_MValueDict_Assign_constMValueRef ( _instance : * mut alt_MValueDict , that : * mut alt_MValue ) ; } extern "C" { pub fn alt_MValueDict_ToBool ( _instance : * mut alt_MValueDict ) -> bool ; } extern "C" { pub fn alt_MValueDict_ToInt ( _instance : * mut alt_MValueDict ) -> :: std :: os :: raw :: c_longlong ; } extern "C" { pub fn alt_MValueDict_ToUInt ( _instance : * mut alt_MValueDict ) -> :: std :: os :: raw :: c_ulonglong ; } extern "C" { pub fn alt_MValueDict_ToString ( _instance : * mut alt_MValueDict ) -> * mut alt_String ; } extern "C" { pub fn alt_MValueDict_GetType ( _instance : * mut alt_MValueDict ) -> alt_MValue_Type ; } extern "C" { pub fn alt_MValueDict_Create_15 ( ) -> * mut alt_MValueDict ; } extern "C" { pub fn alt_MValueDict_Create_17 ( val : * mut alt_MValue ) -> * mut alt_MValueDict ; } extern "C" { pub fn alt_MValueDict_Access_String ( _instance : * mut alt_MValueDict , key : * mut alt_String ) -> * mut alt_MValue ; } extern "C" { pub fn alt_MValueDict_Create_18 ( _p0 : * mut alt_MValueDict ) -> * mut alt_MValueDict ; } extern "C" { pub fn alt_MValueDict_Create_19 ( _p0 : * mut alt_MValueDict ) -> * mut alt_MValueDict ; } extern "C" { pub fn alt_MValueDict_Assign_MValueDictRefRef ( _instance : * mut alt_MValueDict , _p0 : * mut alt_MValueDict ) ; } extern "C" { pub fn alt_MValueDict_Assign_constMValueDictRef ( _instance : * mut alt_MValueDict , _p0 : * mut alt_MValueDict ) ; } # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_IResource { pub type_ : alt_String , pub name : alt_String , pub path : alt_String , pub main : alt_String , pub pkg : * mut alt_IPackage , pub state : alt_IResource_State , pub exports : alt_MValueDict , } # [ test ] fn bindgen_test_layout_alt_IResource ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_IResource > ( ) , 96usize , concat ! ( "Size of: " , stringify ! ( alt_IResource ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_IResource > ( ) , 8usize , concat ! ( "Alignment of " , stringify ! ( alt_IResource ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_IResource > ( ) ) ) . type_ as * const _ as usize } , 0usize , concat ! ( "Offset of field: " , stringify ! ( alt_IResource ) , "::" , stringify ! ( type_ ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_IResource > ( ) ) ) . name as * const _ as usize } , 16usize , concat ! ( "Offset of field: " , stringify ! ( alt_IResource ) , "::" , stringify ! ( name ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_IResource > ( ) ) ) . path as * const _ as usize } , 32usize , concat ! ( "Offset of field: " , stringify ! ( alt_IResource ) , "::" , stringify ! ( path ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_IResource > ( ) ) ) . main as * const _ as usize } , 48usize , concat ! ( "Offset of field: " , stringify ! ( alt_IResource ) , "::" , stringify ! ( main ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_IResource > ( ) ) ) . pkg as * const _ as usize } , 64usize , concat ! ( "Offset of field: " , stringify ! ( alt_IResource ) , "::" , stringify ! ( pkg ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_IResource > ( ) ) ) . state as * const _ as usize } , 72usize , concat ! ( "Offset of field: " , stringify ! ( alt_IResource ) , "::" , stringify ! ( state ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_IResource > ( ) ) ) . exports as * const _ as usize } , 80usize , concat ! ( "Offset of field: " , stringify ! ( alt_IResource ) , "::" , stringify ! ( exports ) ) ) ; } extern "C" { pub fn alt_IResource_GetState ( _instance : * mut alt_IResource ) -> alt_IResource_State ; } extern "C" { pub fn alt_IResource_IsStarted ( _instance : * mut alt_IResource ) -> bool ; } extern "C" { pub fn alt_IResource_GetType ( _instance : * mut alt_IResource ) -> * mut alt_StringView ; } extern "C" { pub fn alt_IResource_GetName ( _instance : * mut alt_IResource ) -> * mut alt_StringView ; } extern "C" { pub fn alt_IResource_GetPath ( _instance : * mut alt_IResource ) -> * mut alt_StringView ; } extern "C" { pub fn alt_IResource_GetMain ( _instance : * mut alt_IResource ) -> * mut alt_StringView ; } extern "C" { pub fn alt_IResource_GetPackage ( _instance : * mut alt_IResource ) -> * mut alt_IPackage ; } extern "C" { pub fn alt_IResource_GetExports ( _instance : * mut alt_IResource ) -> * mut alt_MValueDict ; } extern "C" { pub fn alt_IResource_Instantiate ( _instance : * mut alt_IResource ) -> bool ; } extern "C" { pub fn alt_IResource_Start ( _instance : * mut alt_IResource ) -> bool ; } extern "C" { pub fn alt_IResource_Stop ( _instance : * mut alt_IResource ) -> bool ; } extern "C" { pub fn alt_IResource_OnEvent ( _instance : * mut alt_IResource , ev : * mut alt_CEvent ) -> bool ; } extern "C" { pub fn alt_IResource_OnTick ( _instance : * mut alt_IResource ) ; } extern "C" { pub fn alt_IResource_OnCreateBaseObject ( _instance : * mut alt_IResource , object : * mut alt_IBaseObject ) ; } extern "C" { pub fn alt_IResource_OnRemoveBaseObject ( _instance : * mut alt_IResource , object : * mut alt_IBaseObject ) ; } extern "C" { pub fn alt_IResource_Create ( _p0 : * mut alt_IResource ) -> * mut alt_IResource ; } extern "C" { pub fn alt_IResource_Assign_constIResourceRef ( _instance : * mut alt_IResource , _p0 : * mut alt_IResource ) ; } pub const alt_IResource_State_ALT_IRESOURCE_STATE_STOPPED : alt_IResource_State = 0 ; pub const alt_IResource_State_ALT_IRESOURCE_STATE_INSTANTIATING : alt_IResource_State = 1 ; pub const alt_IResource_State_ALT_IRESOURCE_STATE_STARTED : alt_IResource_State = 2 ; pub type alt_IResource_State = i32 ; # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_IResource_CreationInfo { pub type_ : alt_String , pub name : alt_String , pub path : alt_String , pub main : alt_String , pub deps : alt_Array_String , pub pkg : * mut alt_IPackage , } # [ test ] fn bindgen_test_layout_alt_IResource_CreationInfo ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_IResource_CreationInfo > ( ) , 96usize , concat ! ( "Size of: " , stringify ! ( alt_IResource_CreationInfo ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_IResource_CreationInfo > ( ) , 8usize , concat ! ( "Alignment of " , stringify ! ( alt_IResource_CreationInfo ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_IResource_CreationInfo > ( ) ) ) . type_ as * const _ as usize } , 0usize , concat ! ( "Offset of field: " , stringify ! ( alt_IResource_CreationInfo ) , "::" , stringify ! ( type_ ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_IResource_CreationInfo > ( ) ) ) . name as * const _ as usize } , 16usize , concat ! ( "Offset of field: " , stringify ! ( alt_IResource_CreationInfo ) , "::" , stringify ! ( name ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_IResource_CreationInfo > ( ) ) ) . path as * const _ as usize } , 32usize , concat ! ( "Offset of field: " , stringify ! ( alt_IResource_CreationInfo ) , "::" , stringify ! ( path ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_IResource_CreationInfo > ( ) ) ) . main as * const _ as usize } , 48usize , concat ! ( "Offset of field: " , stringify ! ( alt_IResource_CreationInfo ) , "::" , stringify ! ( main ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_IResource_CreationInfo > ( ) ) ) . deps as * const _ as usize } , 64usize , concat ! ( "Offset of field: " , stringify ! ( alt_IResource_CreationInfo ) , "::" , stringify ! ( deps ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_IResource_CreationInfo > ( ) ) ) . pkg as * const _ as usize } , 88usize , concat ! ( "Offset of field: " , stringify ! ( alt_IResource_CreationInfo ) , "::" , stringify ! ( pkg ) ) ) ; } extern "C" { pub fn alt_IResource_CreationInfo_free ( ptr : * mut alt_IResource_CreationInfo ) ; } extern "C" { pub fn alt_IResource_CreationInfo_Create ( _p0 : * mut alt_IResource_CreationInfo ) -> * mut alt_IResource_CreationInfo ; } extern "C" { pub fn alt_IResource_CreationInfo_Create_1 ( _p0 : * mut alt_IResource_CreationInfo ) -> * mut alt_IResource_CreationInfo ; } extern "C" { pub fn alt_IResource_CreationInfo_Assign_IResource_CreationInfoRefRef ( _instance : * mut alt_IResource_CreationInfo , _p0 : * mut alt_IResource_CreationInfo ) ; } # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_MValueFunction { pub type_ : alt_MValue_Type , pub storage : * mut alt_MValue_Storage , } # [ test ] fn bindgen_test_layout_alt_MValueFunction ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_MValueFunction > ( ) , 16usize , concat ! ( "Size of: " , stringify ! ( alt_MValueFunction ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_MValueFunction > ( ) , 8usize , concat ! ( "Alignment of " , stringify ! ( alt_MValueFunction ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_MValueFunction > ( ) ) ) . type_ as * const _ as usize } , 0usize , concat ! ( "Offset of field: " , stringify ! ( alt_MValueFunction ) , "::" , stringify ! ( type_ ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_MValueFunction > ( ) ) ) . storage as * const _ as usize } , 8usize , concat ! ( "Offset of field: " , stringify ! ( alt_MValueFunction ) , "::" , stringify ! ( storage ) ) ) ; } extern "C" { pub fn alt_MValueFunction_free ( ptr : * mut alt_MValueFunction ) ; } extern "C" { pub fn alt_MValueFunction_Create ( ) -> * mut alt_MValueFunction ; } extern "C" { pub fn alt_MValueFunction_Create_1 ( val : * mut bool ) -> * mut alt_MValueFunction ; } extern "C" { pub 